# redflag

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  alloc.h  ast_render.cpp  ast_render.h  b.hpp  bigfloat.cpp  bigfloat.h  bigint.cpp  bigint.h  buffer.cpp  buffer.h  compiler.txt  compiler_types.h  error.cpp  error.h  error_message.cpp  error_message.h  file.cpp  file.h  hash_map.h  heap.h  lexer.cpp  lexer.h  list.cpp  list.h  logger.cpp  logger.h  main.c  main.cpp  mem.h  memory.cpp  memory.h  optional.cpp  optional.h  (+27 more)
dependencies/lld/lib/: lldCOFF.lib  lldCommon.lib  lldCore.lib  lldDriver.lib  lldMachO.lib  lldMachO2.lib  lldMinGW.lib  lldReaderWriter.lib  lldWasm.lib  lldYAML.lib
dependencies/llvm-wrapper/: lld.cpp  llvm-wrapper.vcxproj  llvm-wrapper.vcxproj.filters  microsoft_craziness.h
dependencies/llvm/lib/: LLVM-C.lib  LLVMAArch64AsmParser.lib  LLVMAArch64Desc.lib  LLVMAArch64Disassembler.lib  LLVMAArch64Info.lib  LLVMAArch64Utils.lib  LLVMAMDGPUAsmParser.lib  LLVMAMDGPUDesc.lib  LLVMAMDGPUDisassembler.lib  LLVMAMDGPUInfo.lib  LLVMAMDGPUUtils.lib  LLVMARMAsmParser.lib  LLVMARMDesc.lib  LLVMARMDisassembler.lib  LLVMARMInfo.lib  LLVMARMUtils.lib  LLVMAVRAsmParser.lib  LLVMAVRCodeGen.lib  LLVMAVRDesc.lib  LLVMAVRDisassembler.lib  LLVMAVRInfo.lib  LLVMAggressiveInstCombine.lib  LLVMAsmParser.lib  LLVMAsmPrinter.lib  LLVMBPFAsmParser.lib  LLVMBPFCodeGen.lib  LLVMBPFDesc.lib  LLVMBPFDisassembler.lib  LLVMBPFInfo.lib  LLVMBinaryFormat.lib  LLVMBitReader.lib  LLVMBitWriter.lib  LLVMBitstreamReader.lib  LLVMCFGuard.lib  LLVMCoroutines.lib  LLVMCoverage.lib  LLVMDWARFLinker.lib  LLVMDebugInfoCodeView.lib  LLVMDebugInfoDWARF.lib  LLVMDebugInfoGSYM.lib  (+100 more)
editor/: editor.vcxproj  editor.vcxproj.filters  weirdfuck.src
editor/dependencies/cimgui/: cimgui.vcxproj  cimgui.vcxproj.filters
editor/dependencies/sokol/: sokol.vcxproj  sokol.vcxproj.filters
editor/src/: main.c  os.h  types.h
lib/: memory.red
libred/: CMakeLists.txt  libred.rdbg
libred/src/: bigfloat.c  bigfloat.h  bigint.c  bytecode.c  bytecode.h  compiler.c  compiler.h  compiler_types.h  ir.c  ir.h  lexer.c  lexer.h  llvm.c  llvm.h  main.c  os.c  os.h  parser.c  parser.h  src_file.c  src_file.h  types.h
llvm-wrapper/: CMakeLists.txt  llvm-wrapper.vcxproj
llvm-wrapper/outdummy/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  acc_gen.vcxproj  cmake_install.cmake  intrinsics_gen.vcxproj  intrinsics_gen.vcxproj.filters  llvm-wrapper.sln  llvm-wrapper.vcxproj  llvm-wrapper.vcxproj.filters  omp_gen.vcxproj
llvm-wrapper/src/: lld.cpp  lld.h  microsoft_craziness.cpp
src/: alloc.cpp  alloc.h  allocator.cpp  ast_render.cpp  ast_types.h  bigfloat.c  bigfloat.cpp  bigfloat.h  bigint.c  bigint.cpp  bigint.h  buffer.cpp  buffer.h  codegen.cpp  codegen.h  compiler_types.h  config.h  error_message.cpp  error_message.h  file.cpp  file.h  hash_map.h  heap.cpp  ir.c  ir.h  lexer.c  lexer.cpp  lexer.h  list.h  llvm.c  llvm.h  llvm_codegen.c  llvm_codegen.cpp  llvm_codegen.h  logger.cpp  main.c  main.cpp  mem.h  new_parser.c  new_parser.cpp  (+18 more)
test/: c_example.c  example.ll  first_hello_world.red  imported_module.red  jit_hello_world.red  main.c  main.red  not_passing.red  test.red
(+25 files in other folders)
