cmake_minimum_required(VERSION 3.15)
project(redflag)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 11)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
add_executable(redflag list.cpp list.h main.cpp alloc.cpp alloc.h buffer.cpp buffer.h logger.cpp logger.h lexer.cpp lexer.h file.cpp file.h panic.cpp panic.h bigint.cpp bigint.h bigfloat.cpp bigfloat.h compiler_types.h memory.h error_message.cpp error_message.h src_file.h src_file.cpp optional.h ast_render.cpp ast_render.h hash_map.h heap.h mem.h slice.h os.cpp os.h red_parser.cpp red_parser.h)
